
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int val ;
struct addrinfo {int ai_addrlen; int ai_addr; scalar_t__ ai_protocol; int ai_socktype; int ai_family; struct addrinfo* ai_next; int ai_flags; } ;


 int AI_PASSIVE ;
 int INT_MAX ;
 int PF_INET ;
 int SOCK_STREAM ;
 int SOL_SOCKET ;
 int SO_REUSEADDR ;
 scalar_t__ bind (int,int ,int ) ;
 int close (int) ;
 int freeaddrinfo (struct addrinfo*) ;
 int gai_errno ;
 int getaddrinfo (char const*,char const*,struct addrinfo*,struct addrinfo**) ;
 scalar_t__ listen (int,int ) ;
 int setsockopt (int,int ,int ,int const*,int) ;
 int socket (int ,int ,scalar_t__) ;

int
socket_listen (const char *hostname, const char *servname)
{
 struct addrinfo hints, *res;

 hints.ai_family = PF_INET;
 hints.ai_socktype = SOCK_STREAM;
 hints.ai_protocol = 0;
 hints.ai_flags = AI_PASSIVE;

 if ((gai_errno = getaddrinfo (hostname, servname, &hints, &res)) == 0)
 {
  struct addrinfo *ptr;

  for (ptr = res; ptr != ((void*)0); ptr = ptr->ai_next)
  {
   int sock;

   sock = socket (ptr->ai_family, ptr->ai_socktype,
     ptr->ai_protocol);
   if (sock != -1)
   {
    const int val = 1;

    setsockopt (sock, SOL_SOCKET, SO_REUSEADDR,
      &val, sizeof (val));
    if (bind (sock, ptr->ai_addr, ptr->ai_addrlen)
     || listen (sock, INT_MAX))
     close (sock);
    else
    {

     freeaddrinfo (res);
     return sock;
    }
   }
  }
  freeaddrinfo (res);
 }
 return -1;
}
